--- a/main.ipynb
+++ b/main.ipynb
@@ -422,6 +422,125 @@
     "I'll probably use a library(openball from sklearn) to map each wind turbine to the nearest grid on the NERL dataset\n",
     "https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.BallTree.html#sklearn.neighbors.BallTree\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ba73f8d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: geopandas in c:\\users\\bemne\\anaconda3\\lib\\site-packages (1.1.1)\n",
+      "Requirement already satisfied: numpy>=1.24 in c:\\users\\bemne\\anaconda3\\lib\\site-packages (from geopandas) (2.1.3)\n",
+      "Requirement already satisfied: pyogrio>=0.7.2 in c:\\users\\bemne\\anaconda3\\lib\\site-packages (from geopandas) (0.11.1)\n",
+      "Requirement already satisfied: packaging in c:\\users\\bemne\\anaconda3\\lib\\site-packages (from geopandas) (24.2)\n",
+      "Requirement already satisfied: pandas>=2.0.0 in c:\\users\\bemne\\anaconda3\\lib\\site-packages (from geopandas) (2.2.3)\n",
+      "Requirement already satisfied: pyproj>=3.5.0 in c:\\users\\bemne\\anaconda3\\lib\\site-packages (from geopandas) (3.7.2)\n",
+      "Requirement already satisfied: shapely>=2.0.0 in c:\\users\\bemne\\anaconda3\\lib\\site-packages (from geopandas) (2.1.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\bemne\\anaconda3\\lib\\site-packages (from pandas>=2.0.0->geopandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\bemne\\anaconda3\\lib\\site-packages (from pandas>=2.0.0->geopandas) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\bemne\\anaconda3\\lib\\site-packages (from pandas>=2.0.0->geopandas) (2025.2)\n",
+      "Requirement already satisfied: certifi in c:\\users\\bemne\\anaconda3\\lib\\site-packages (from pyogrio>=0.7.2->geopandas) (2025.4.26)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\bemne\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.2->pandas>=2.0.0->geopandas) (1.17.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'nrel_site_id'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\bemne\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[1;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'nrel_site_id'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 50\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[38;5;66;03m# 5) Nearest-neighbor spatial join with a distance cap\u001b[39;00m\n\u001b[0;32m     27\u001b[0m joined_m \u001b[38;5;241m=\u001b[39m gpd\u001b[38;5;241m.\u001b[39msjoin_nearest(\n\u001b[0;32m     28\u001b[0m     g_uswtdb_m,\n\u001b[0;32m     29\u001b[0m     g_nrel_m[[\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     46\u001b[0m     max_distance\u001b[38;5;241m=\u001b[39mMAX_DIST_M,\n\u001b[0;32m     47\u001b[0m )\n\u001b[1;32m---> 50\u001b[0m joined[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmatch_ok\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m joined_m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnrel_site_id\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mnotna()\n\u001b[0;32m     52\u001b[0m joined\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muswt_nrel_joined.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "File \u001b[1;32mc:\\Users\\bemne\\anaconda3\\Lib\\site-packages\\geopandas\\geodataframe.py:1896\u001b[0m, in \u001b[0;36mGeoDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   1890\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, key):\n\u001b[0;32m   1891\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   1892\u001b[0m \u001b[38;5;124;03m    If the result is a column containing only 'geometry', return a\u001b[39;00m\n\u001b[0;32m   1893\u001b[0m \u001b[38;5;124;03m    GeoSeries. If it's a DataFrame with any columns of GeometryDtype,\u001b[39;00m\n\u001b[0;32m   1894\u001b[0m \u001b[38;5;124;03m    return a GeoDataFrame.\u001b[39;00m\n\u001b[0;32m   1895\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 1896\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__getitem__\u001b[39m(key)\n\u001b[0;32m   1897\u001b[0m     \u001b[38;5;66;03m# Custom logic to avoid waiting for pandas GH51895\u001b[39;00m\n\u001b[0;32m   1898\u001b[0m     \u001b[38;5;66;03m# result is not geometry dtype for multi-indexes\u001b[39;00m\n\u001b[0;32m   1899\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[0;32m   1900\u001b[0m         pd\u001b[38;5;241m.\u001b[39mapi\u001b[38;5;241m.\u001b[39mtypes\u001b[38;5;241m.\u001b[39mis_scalar(key)\n\u001b[0;32m   1901\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m key \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1904\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_geometry_type(result)\n\u001b[0;32m   1905\u001b[0m     ):\n",
+      "File \u001b[1;32mc:\\Users\\bemne\\anaconda3\\Lib\\site-packages\\pandas\\core\\frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mget_loc(key)\n\u001b[0;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[1;32mc:\\Users\\bemne\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3810\u001b[0m     ):\n\u001b[0;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'nrel_site_id'"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install geopandas\n",
+    "\n",
+    "import geopandas as gpd\n",
+    "from shapely.geometry import Point\n",
+    "\n",
+    "# Build geometry columns\n",
+    "g_uswtdb = gpd.GeoDataFrame(\n",
+    "    uswtdb,\n",
+    "    geometry=gpd.points_from_xy(uswtdb.xlong, uswtdb.ylat),\n",
+    "    crs=\"EPSG:4326\"\n",
+    ")\n",
+    "\n",
+    "g_nrel = gpd.GeoDataFrame(\n",
+    "    nrel,\n",
+    "    geometry=gpd.points_from_xy(nrel.longitude, nrel.latitude),\n",
+    "    crs=\"EPSG:4326\"\n",
+    ")\n",
+    "\n",
+    "g_uswtdb_m = g_uswtdb.to_crs(3857)\n",
+    "g_nrel_m = g_nrel.to_crs(3857)\n",
+    "\n",
+    "# 4) One tolerance for everyone (tune this after inspecting a distance histogram)\n",
+    "MAX_DIST_M = 25000  # 25 km\n",
+    "\n",
+    "# 5) Nearest-neighbor spatial join with a distance cap\n",
+    "\n",
+    "joined_m = gpd.sjoin_nearest(\n",
+    "    g_uswtdb_m,\n",
+    "    g_nrel_m[[\n",
+    "        \"geometry\",\n",
+    "        \"site_id\",\n",
+    "        \"longitude\",\n",
+    "        \"latitude\",\n",
+    "        \"State\",\n",
+    "        \"County\",\n",
+    "        \"fraction_of_usable_area\",\n",
+    "        \"power_curve\",\n",
+    "        \"capacity\",\n",
+    "        \"wind_speed\",\n",
+    "        \"capacity_factor\",\n",
+    "        \"full_timeseries_directory\",\n",
+    "        \"full_timeseries_path\"\n",
+    "    ]],\n",
+    "    how=\"left\",\n",
+    "    distance_col=\"dist_m\",\n",
+    "    max_distance=MAX_DIST_M,\n",
+    ")\n",
+    "\n",
+    "\n",
+    "joined[\"match_ok\"] = joined_m[\"nrel_site_id\"].notna()\n",
+    "\n",
+    "joined.to_csv(\"uswt_nrel_joined.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46aa8ab0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2eaebe3e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
