--- a/main.ipynb
+++ b/main.ipynb
@@ -419,8 +419,8 @@
    "id": "e41f874f",
    "metadata": {},
    "source": [
-    "I'll probably use a library(openball from sklearn) to map each wind turbine to the nearest grid on the NERL dataset\n",
-    "https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.BallTree.html#sklearn.neighbors.BallTree\n"
+    "# Use spatial nearest-neighbor joins to assign each USWTDB wind turbine to its nearest NREL WTK grid cell\n",
+    "# Used geopandas to fo nearest-neighbor joins\n"
    ]
   },
   {
