Add code cells to read and display joined USWTDB and NREL data

--- a/main.ipynb
+++ b/main.ipynb
@@ -507,15 +507,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46aa8ab0",
+   "id": "2eaebe3e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "uswtdb_nrel_joined = pd.read_csv(\"uswt_nrel_joined.csv\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2eaebe3e",
+   "id": "55a89ca8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uswtdb_nrel_joined.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aec777c7",
    "metadata": {},
    "outputs": [],
    "source": []
