created the training data

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "da86acc7",
    "metadata": {},
    "outputs": [],
@@ -506,235 +506,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "2eaebe3e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "uswtdb_nrel_joined = pd.read_csv(\"uswt_nrel_joined.csv\")"
+    "uswtdb_nrel_joined = pd.read_csv(\"uswt_nrel_joined_match.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "55a89ca8",
+   "execution_count": 9,
+   "id": "aec777c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uswtdb_nrel_joined.rename(columns={\"match_ok\": \"isTurbine\"}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "39044582",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>case_id</th>\n",
-       "      <th>faa_ors</th>\n",
-       "      <th>faa_asn</th>\n",
-       "      <th>usgs_pr_id</th>\n",
-       "      <th>eia_id</th>\n",
-       "      <th>t_state</th>\n",
-       "      <th>t_county</th>\n",
-       "      <th>t_fips</th>\n",
-       "      <th>p_name</th>\n",
-       "      <th>p_year</th>\n",
-       "      <th>...</th>\n",
-       "      <th>County</th>\n",
-       "      <th>fraction_of_usable_area</th>\n",
-       "      <th>power_curve</th>\n",
-       "      <th>capacity</th>\n",
-       "      <th>wind_speed</th>\n",
-       "      <th>capacity_factor</th>\n",
-       "      <th>full_timeseries_directory</th>\n",
-       "      <th>full_timeseries_path</th>\n",
-       "      <th>dist_m</th>\n",
-       "      <th>match_ok</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3119490</td>\n",
-       "      <td>40-097498</td>\n",
-       "      <td>2021-WTW-7911-OE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>65511.0</td>\n",
-       "      <td>OK</td>\n",
-       "      <td>Ellis County</td>\n",
-       "      <td>40045.0</td>\n",
-       "      <td>25 Mile Creek</td>\n",
-       "      <td>2022.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Ellis</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>8.45</td>\n",
-       "      <td>0.484</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>52/26146.nc</td>\n",
-       "      <td>3309.757220</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3124158</td>\n",
-       "      <td>40-098166</td>\n",
-       "      <td>2021-WTW-7917-OE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>65511.0</td>\n",
-       "      <td>OK</td>\n",
-       "      <td>Ellis County</td>\n",
-       "      <td>40045.0</td>\n",
-       "      <td>25 Mile Creek</td>\n",
-       "      <td>2022.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Ellis</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>8.70</td>\n",
-       "      <td>0.501</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>53/26729.nc</td>\n",
-       "      <td>1062.963011</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3123358</td>\n",
-       "      <td>40-098173</td>\n",
-       "      <td>2021-WTW-7871-OE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>65511.0</td>\n",
-       "      <td>OK</td>\n",
-       "      <td>Ellis County</td>\n",
-       "      <td>40045.0</td>\n",
-       "      <td>25 Mile Creek</td>\n",
-       "      <td>2022.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Ellis</td>\n",
-       "      <td>0.9978</td>\n",
-       "      <td>2</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>8.72</td>\n",
-       "      <td>0.499</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>53/26731.nc</td>\n",
-       "      <td>1251.456325</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3123761</td>\n",
-       "      <td>40-097539</td>\n",
-       "      <td>2021-WTW-7888-OE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>65511.0</td>\n",
-       "      <td>OK</td>\n",
-       "      <td>Ellis County</td>\n",
-       "      <td>40045.0</td>\n",
-       "      <td>25 Mile Creek</td>\n",
-       "      <td>2022.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Ellis</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>8.61</td>\n",
-       "      <td>0.499</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>52/26272.nc</td>\n",
-       "      <td>761.288548</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3124023</td>\n",
-       "      <td>40-097763</td>\n",
-       "      <td>2021-WTW-7894-OE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>65511.0</td>\n",
-       "      <td>OK</td>\n",
-       "      <td>Ellis County</td>\n",
-       "      <td>40045.0</td>\n",
-       "      <td>25 Mile Creek</td>\n",
-       "      <td>2022.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Ellis</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>8.56</td>\n",
-       "      <td>0.496</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>52/26271.nc</td>\n",
-       "      <td>1771.754321</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 46 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   case_id    faa_ors           faa_asn  usgs_pr_id   eia_id t_state  \\\n",
-       "0  3119490  40-097498  2021-WTW-7911-OE         NaN  65511.0      OK   \n",
-       "1  3124158  40-098166  2021-WTW-7917-OE         NaN  65511.0      OK   \n",
-       "2  3123358  40-098173  2021-WTW-7871-OE         NaN  65511.0      OK   \n",
-       "3  3123761  40-097539  2021-WTW-7888-OE         NaN  65511.0      OK   \n",
-       "4  3124023  40-097763  2021-WTW-7894-OE         NaN  65511.0      OK   \n",
-       "\n",
-       "       t_county   t_fips         p_name  p_year  ...  County  \\\n",
-       "0  Ellis County  40045.0  25 Mile Creek  2022.0  ...   Ellis   \n",
-       "1  Ellis County  40045.0  25 Mile Creek  2022.0  ...   Ellis   \n",
-       "2  Ellis County  40045.0  25 Mile Creek  2022.0  ...   Ellis   \n",
-       "3  Ellis County  40045.0  25 Mile Creek  2022.0  ...   Ellis   \n",
-       "4  Ellis County  40045.0  25 Mile Creek  2022.0  ...   Ellis   \n",
-       "\n",
-       "   fraction_of_usable_area power_curve capacity  wind_speed  capacity_factor  \\\n",
-       "0                   1.0000           2     16.0        8.45            0.484   \n",
-       "1                   1.0000           2     16.0        8.70            0.501   \n",
-       "2                   0.9978           2     16.0        8.72            0.499   \n",
-       "3                   1.0000           2     16.0        8.61            0.499   \n",
-       "4                   1.0000           2     16.0        8.56            0.496   \n",
-       "\n",
-       "   full_timeseries_directory  full_timeseries_path       dist_m  match_ok  \n",
-       "0                       52.0           52/26146.nc  3309.757220      True  \n",
-       "1                       53.0           53/26729.nc  1062.963011      True  \n",
-       "2                       53.0           53/26731.nc  1251.456325      True  \n",
-       "3                       52.0           52/26272.nc   761.288548      True  \n",
-       "4                       52.0           52/26271.nc  1771.754321      True  \n",
-       "\n",
-       "[5 rows x 46 columns]"
+       "Index(['case_id', 'faa_ors', 'faa_asn', 'usgs_pr_id', 'eia_id', 't_state',\n",
+       "       't_county', 't_fips', 'p_name', 'p_year', 'p_tnum', 'p_cap', 't_manu',\n",
+       "       't_model', 't_cap', 't_hh', 't_rd', 't_rsa', 't_ttlh', 't_retrofit',\n",
+       "       't_retro_yr', 't_offshore', 't_conf_atr', 't_conf_loc', 't_img_date',\n",
+       "       't_img_src', 'xlong', 'ylat', 'longtude', 'latitude_left', 'geometry',\n",
+       "       'index_right', 'site_id', 'longitude', 'latitude_right', 'State',\n",
+       "       'County', 'fraction_of_usable_area', 'power_curve', 'capacity',\n",
+       "       'wind_speed', 'capacity_factor', 'full_timeseries_directory',\n",
+       "       'full_timeseries_path', 'dist_m', 'isTurbine'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "uswtdb_nrel_joined.head()"
+    "uswtdb_nrel_joined.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "291b49d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\bemne\\AppData\\Local\\Temp\\ipykernel_98808\\3621930812.py:9: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  training_data['isTurbine'].fillna(False, inplace=True)\n",
+      "C:\\Users\\bemne\\AppData\\Local\\Temp\\ipykernel_98808\\3621930812.py:9: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  training_data['isTurbine'].fillna(False, inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "nrel = pd.read_csv('wtk_site_metadata.csv')\n",
+    "uswtdb = pd.read_csv('uswtdb_V8_1_20250522.csv')\n",
+    "training_data = nrel.merge(\n",
+    "    uswtdb_nrel_joined[['site_id', 'isTurbine']],\n",
+    "    on='site_id',\n",
+    "    how='left'\n",
+    ")\n",
+    "\n",
+    "training_data['isTurbine'].fillna(False, inplace=True)\n",
+    "training_data.to_csv('nrel_training_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "dc9c95ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "County\n",
+       "Unknown         14310\n",
+       "Kern             3981\n",
+       "Lincoln          2881\n",
+       "Carbon           2237\n",
+       "Nolan            1651\n",
+       "                ...  \n",
+       "Palo Pinto          1\n",
+       "Rockwall            1\n",
+       "Rains               1\n",
+       "Morehouse           1\n",
+       "West Carroll        1\n",
+       "Name: count, Length: 1767, dtype: int64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "training_data['County'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aec777c7",
+   "id": "a7333652",
    "metadata": {},
    "outputs": [],
    "source": []
