Finished training our first model using logistic regression

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,12 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "id": "da86acc7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report, roc_auc_score"
    ]
   },
   {
@@ -556,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 65,
    "id": "291b49d0",
    "metadata": {},
    "outputs": [
@@ -564,14 +568,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bemne\\AppData\\Local\\Temp\\ipykernel_98808\\3621930812.py:9: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\bemne\\AppData\\Local\\Temp\\ipykernel_98808\\1036386332.py:9: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  training_data['isTurbine'].fillna(False, inplace=True)\n",
-      "C:\\Users\\bemne\\AppData\\Local\\Temp\\ipykernel_98808\\3621930812.py:9: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\bemne\\AppData\\Local\\Temp\\ipykernel_98808\\1036386332.py:9: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  training_data['isTurbine'].fillna(False, inplace=True)\n"
      ]
     }
@@ -586,12 +590,13 @@
     ")\n",
     "\n",
     "training_data['isTurbine'].fillna(False, inplace=True)\n",
+    "training_data = training_data.drop(columns=['power_curve'])\n",
     "training_data.to_csv('nrel_training_data.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 66,
    "id": "dc9c95ae",
    "metadata": {},
    "outputs": [
@@ -613,7 +618,7 @@
        "Name: count, Length: 1767, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,12 +629,253 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20baf623",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "a7333652",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "training_data = pd.read_csv('nrel_training_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39a48c74",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "390ebfff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = training_data[[\n",
+    "    \"fraction_of_usable_area\",\n",
+    "    \"capacity\",\n",
+    "    \"wind_speed\",\n",
+    "    \"capacity_factor\"\n",
+    "]]\n",
+    "y = training_data['isTurbine']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "3d334d91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fraction_of_usable_area</th>\n",
+       "      <th>capacity</th>\n",
+       "      <th>wind_speed</th>\n",
+       "      <th>capacity_factor</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>6.07</td>\n",
+       "      <td>0.169</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>7.43</td>\n",
+       "      <td>0.302</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>8.19</td>\n",
+       "      <td>0.375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>8.19</td>\n",
+       "      <td>0.375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>8.19</td>\n",
+       "      <td>0.376</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   fraction_of_usable_area  capacity  wind_speed  capacity_factor\n",
+       "0                      1.0        16        6.07            0.169\n",
+       "1                      1.0        16        7.43            0.302\n",
+       "2                      1.0        16        8.19            0.375\n",
+       "3                      1.0        16        8.19            0.375\n",
+       "4                      1.0        16        8.19            0.376"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "7a835705",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y,\n",
+    "    test_size=0.2,\n",
+    "    random_state=42,\n",
+    "    stratify=y\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "24a574fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5. Scale features (logistic regression needs this)\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "5518d402",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC-AUC: 0.7318750421011098\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False      0.779     0.591     0.672     23642\n",
+      "        True      0.522     0.728     0.608     14530\n",
+      "\n",
+      "    accuracy                          0.643     38172\n",
+      "   macro avg      0.651     0.659     0.640     38172\n",
+      "weighted avg      0.681     0.643     0.648     38172\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "log_reg = LogisticRegression(\n",
+    "    max_iter=1000,\n",
+    "    class_weight=\"balanced\",  # helps with imbalance\n",
+    "    n_jobs=-1\n",
+    ")\n",
+    "log_reg.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# 7. Evaluate\n",
+    "y_pred = log_reg.predict(X_test_scaled)\n",
+    "y_prob = log_reg.predict_proba(X_test_scaled)[:, 1]\n",
+    "\n",
+    "print(\"ROC-AUC:\", roc_auc_score(y_test, y_prob))\n",
+    "print(classification_report(y_test, y_pred, digits=3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4db855cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model and scaler saved successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "# Save the model\n",
+    "joblib.dump(log_reg, \"logistic_regression_wind_model.pkl\")\n",
+    "\n",
+    "# Save the scaler (needed to transform future data the same way)\n",
+    "joblib.dump(scaler, \"scaler.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "b2bc771a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC saved to model_metrics.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "metrics = {\n",
+    "    \"model\": \"logistic_regression\",\n",
+    "    \"roc_auc\": roc_auc_score(y_test, y_prob),\n",
+    "    \"classification_report\": classification_report(y_test, y_pred, digits=3, output_dict=True)\n",
+    "}\n",
+    "\n",
+    "with open(\"model_metrics.json\", \"w\") as f:\n",
+    "    json.dump(metrics, f, indent=4)\n",
+    "\n",
+    "print(\"AUC saved to model_metrics.json\")"
+   ]
   }
  ],
  "metadata": {
