added comments thorughout the code

--- a/main.ipynb
+++ b/main.ipynb
@@ -1,6 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1b3fb409",
+   "metadata": {},
+   "source": [
+    "# Wind Turbine Location Prediction Model\n",
+    "\n",
+    "This notebook builds a machine learning model to predict whether a location (from NREL's Wind Toolkit) has a wind turbine based on various features. The workflow includes:\n",
+    "\n",
+    "1. **Data Loading**: Loading USWTDB (wind turbine database) and NREL WTK (Wind Toolkit) data\n",
+    "2. **Spatial Matching**: Using geospatial joins to match turbines to NREL grid cells\n",
+    "3. **Feature Engineering**: Preparing features for machine learning\n",
+    "4. **Model Training**: Training a logistic regression classifier\n",
+    "5. **Model Evaluation**: Evaluating and saving the trained model\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81db0925",
+   "metadata": {},
+   "source": [
+    "## 1. Import Required Libraries\n",
+    "\n",
+    "Import the necessary libraries for data manipulation, machine learning, and model evaluation.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "id": "da86acc7",
@@ -16,10 +42,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e89c713b",
+   "metadata": {},
+   "source": [
+    "## 2. Load and Preprocess USWTDB Data\n",
+    "\n",
+    "Load the US Wind Turbine Database (USWTDB) which contains information about existing wind turbines. We round the longitude and latitude coordinates to 3 decimal places to match the precision of the NREL dataset for spatial matching.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ddd20fa4",
    "metadata": {},
    "source": [
     "Changing column names and rounding of USWTDB to match NREL datasite"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c79ad784",
+   "metadata": {},
+   "source": [
+    "## 3. Load and Preprocess NREL WTK Data\n",
+    "\n",
+    "Load the NREL Wind Toolkit (WTK) site metadata which contains grid cell locations and wind resource data. Similar to the USWTDB data, we round coordinates to 3 decimal places for spatial matching.\n"
    ]
   },
   {
@@ -244,10 +290,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e5ce11fa",
+   "metadata": {},
+   "source": [
+    "## 4. Spatial Join: Matching Turbines to NREL Grid Cells\n",
+    "\n",
+    "This section performs a spatial nearest-neighbor join to match each wind turbine from the USWTDB to its nearest NREL WTK grid cell. This allows us to:\n",
+    "- Identify which NREL grid cells have turbines (positive examples)\n",
+    "- Identify which NREL grid cells don't have turbines (negative examples)\n",
+    "\n",
+    "**Key steps:**\n",
+    "1. Install and import geopandas for geospatial operations\n",
+    "2. Convert dataframes to GeoDataFrames with point geometries\n",
+    "3. Transform coordinates to a projected CRS (EPSG:3857) for accurate distance calculations in meters\n",
+    "4. Perform nearest-neighbor spatial join with a maximum distance cap of 25 km\n",
+    "5. Create a match indicator and save the joined dataset\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a069d69c",
    "metadata": {},
    "source": [
     "Changing column names and rounding of USWTDB to match NREL datasite"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e4b62c9",
+   "metadata": {},
+   "source": [
+    "## 5. Load Joined Data and Prepare Labels\n",
+    "\n",
+    "Load the spatially joined dataset and rename the `match_ok` column to `isTurbine` to create a binary label indicating whether a turbine exists at that location.\n"
    ]
   },
   {
@@ -420,11 +495,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "737c9cb5",
+   "metadata": {},
+   "source": [
+    "### Check Column Names\n",
+    "\n",
+    "Verify the columns in the joined dataset to ensure data structure is correct.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e41f874f",
    "metadata": {},
    "source": [
     "# Use spatial nearest-neighbor joins to assign each USWTDB wind turbine to its nearest NREL WTK grid cell\n",
     "# Used geopandas to fo nearest-neighbor joins\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa785715",
+   "metadata": {},
+   "source": [
+    "## 6. Create Training Dataset\n",
+    "\n",
+    "Merge the NREL site metadata with the turbine labels (`isTurbine`) to create the training dataset. This dataset will be used to train the machine learning model.\n",
+    "\n",
+    "**Process:**\n",
+    "- Merge NREL data with turbine labels based on `site_id`\n",
+    "- Fill missing values in `isTurbine` with `False` (locations without turbines)\n",
+    "- Remove the `power_curve` column (not needed for this model)\n",
+    "- Save the prepared training data to CSV\n"
    ]
   },
   {
@@ -509,6 +610,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef8543f8",
+   "metadata": {},
+   "source": [
+    "### Explore Data Distribution\n",
+    "\n",
+    "Check the distribution of counties in the training data to understand the geographic coverage.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "2eaebe3e",
@@ -519,6 +630,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e8a600b8",
+   "metadata": {},
+   "source": [
+    "## 7. Prepare Features and Target Variable\n",
+    "\n",
+    "Load the training data and select the features that will be used to predict turbine presence:\n",
+    "\n",
+    "- **fraction_of_usable_area**: Fraction of the grid cell that is usable for wind development\n",
+    "- **capacity**: Potential capacity of the site\n",
+    "- **wind_speed**: Average wind speed at the site\n",
+    "- **capacity_factor**: Expected capacity factor (efficiency)\n",
+    "\n",
+    "The target variable `isTurbine` indicates whether a turbine exists at that location (True/False).\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "aec777c7",
@@ -526,6 +654,16 @@
    "outputs": [],
    "source": [
     "uswtdb_nrel_joined.rename(columns={\"match_ok\": \"isTurbine\"}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b4a8a60",
+   "metadata": {},
+   "source": [
+    "### Inspect Feature Data\n",
+    "\n",
+    "Preview the feature matrix to verify the data structure.\n"
    ]
   },
   {
@@ -556,6 +694,16 @@
    ],
    "source": [
     "uswtdb_nrel_joined.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a6b2086",
+   "metadata": {},
+   "source": [
+    "## 8. Split Data into Training and Testing Sets\n",
+    "\n",
+    "Split the data into training (80%) and testing (20%) sets. Using stratified sampling ensures that both sets have similar proportions of turbine and non-turbine locations, which is important for imbalanced datasets.\n"
    ]
   },
   {
@@ -595,6 +743,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bef6eb38",
+   "metadata": {},
+   "source": [
+    "## 9. Scale Features\n",
+    "\n",
+    "Standardize the features using StandardScaler. This is important for logistic regression because:\n",
+    "- Features are on different scales (e.g., capacity vs. wind_speed)\n",
+    "- Logistic regression is sensitive to feature scaling\n",
+    "- Standardization improves convergence and model performance\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 66,
    "id": "dc9c95ae",
@@ -630,9 +791,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c4e04835",
+   "metadata": {},
+   "source": [
+    "## 10. Train Logistic Regression Model\n",
+    "\n",
+    "Train a logistic regression classifier with the following settings:\n",
+    "- **max_iter=1000**: Maximum iterations for convergence\n",
+    "- **class_weight=\"balanced\"**: Automatically adjust weights to handle class imbalance (more non-turbine locations than turbine locations)\n",
+    "- **n_jobs=-1**: Use all available CPU cores for faster training\n",
+    "\n",
+    "After training, evaluate the model on the test set using:\n",
+    "- **ROC-AUC score**: Measures the model's ability to distinguish between classes\n",
+    "- **Classification report**: Provides precision, recall, and F1-score for each class\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "20baf623",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7003fa4",
+   "metadata": {},
+   "source": [
+    "## 11. Save Model and Scaler\n",
+    "\n",
+    "Save the trained model and scaler to disk so they can be loaded later for making predictions on new data. The scaler is essential because new data must be transformed using the same scaling parameters used during training.\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -642,6 +830,16 @@
    "outputs": [],
    "source": [
     "training_data = pd.read_csv('nrel_training_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a23ce6b7",
+   "metadata": {},
+   "source": [
+    "## 12. Save Model Metrics\n",
+    "\n",
+    "Save the model evaluation metrics (ROC-AUC score and classification report) to a JSON file for record-keeping and future reference.\n"
    ]
   },
   {
