--- a/xgboost/xgboost.ipynb
+++ b/xgboost/xgboost.ipynb
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ece30ab0",
    "metadata": {},
    "outputs": [
@@ -620,6 +620,50 @@
     }
    ],
    "source": [
+    "from sklearn.metrics import roc_auc_score, roc_curve, accuracy_score, precision_score, recall_score, f1_score, classification_report\n",
+    "import joblib\n",
+    "import json\n",
+    "\n",
+    "# Compute probabilities for ROC-AUC\n",
+    "y_proba = model.predict_proba(X_test)[:, 1]\n",
+    "\n",
+    "# Print ROC-AUC score\n",
+    "roc_auc = roc_auc_score(y_test, y_proba)\n",
+    "print(f\"ROC-AUC Score: {roc_auc:.3f}\")\n",
+    "\n",
+    "# Print ROC curve values\n",
+    "fpr, tpr, thresholds = roc_curve(y_test, y_proba)\n",
+    "print(\"FPR:\", fpr)\n",
+    "print(\"TPR:\", tpr)\n",
+    "\n",
+    "# Save the model as a .pkl file\n",
+    "joblib.dump(model, \"xgboost_model.pkl\")\n",
+    "\n",
+    "# Save model config/specs as a JSON\n",
+    "model_specs = {\n",
+    "    \"n_estimators\": 300,\n",
+    "    \"learning_rate\": 0.05,\n",
+    "    \"max_depth\": 6,\n",
+    "    \"subsample\": 0.8,\n",
+    "    \"colsample_bytree\": 0.8,\n",
+    "    \"objective\": \"binary:logistic\",\n",
+    "    \"eval_metric\": \"logloss\"\n",
+    "}\n",
+    "with open(\"xgboost_model_specs.json\", \"w\") as f:\n",
+    "    json.dump(model_specs, f, indent=4)\n",
+    "\n",
+    "# Save the model metrics in the same format as random_forest.ipynb\n",
+    "metrics = {\n",
+    "    \"model\": \"xgboost\",\n",
+    "    \"roc_auc\": roc_auc,\n",
+    "    \"classification_report\": classification_report(y_test, preds, digits=3, output_dict=True)\n",
+    "}\n",
+    "with open(\"xgboost_model_metrics.json\", \"w\") as f:\n",
+    "    json.dump(metrics, f, indent=4)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   }
